# logmon-mcp

./: .gitignore  Cargo.toml  README.md  test-gelf.sh
.claude-plugin/: marketplace.json  plugin.json
crates/_legacy/: Cargo.toml
crates/_legacy/src/: config.rs  lib.rs
crates/_legacy/src/daemon/: log_processor.rs  mod.rs  rpc_handler.rs  server.rs
crates/_legacy/src/filter/: bookmark_resolver.rs
crates/_legacy/src/mcp/: mod.rs
crates/_legacy/src/receiver/otlp/: grpc.rs
crates/_legacy/src/rpc/: types.rs
crates/_legacy/src/shim/: auto_start.rs  bridge.rs
crates/_legacy/src/store/: memory.rs  traits.rs
crates/_legacy/tests/: filter_dsl.rs  gelf_tcp.rs  log_processor.rs  pre_buffer.rs  session_registry.rs  span_processor.rs  span_types.rs  trace_linking.rs
crates/broker/: Cargo.toml
crates/broker/src/: main.rs
crates/broker/src/service/: linux.rs  macos.rs  mod.rs
crates/broker/templates/: launchd.plist.template  systemd.service.template
crates/core/: Cargo.toml
crates/core/src/: lib.rs  test_support.rs
crates/core/src/daemon/: domain.rs  domain_lifecycle.rs  log_processor.rs  persistence.rs  process.rs  rpc_handler.rs  server.rs  session.rs  span_processor.rs  transport.rs
crates/core/src/engine/: mod.rs  pipeline.rs  pre_buffer.rs  seq_counter.rs  trigger.rs
crates/core/src/filter/: bookmark_resolver.rs  matcher.rs  mod.rs  parser.rs
crates/core/src/gelf/: message.rs  tcp.rs  udp.rs
crates/core/src/receiver/: gelf.rs  metrics.rs  mod.rs
crates/core/src/receiver/otlp/: grpc.rs  http.rs  mapping.rs  mod.rs
crates/core/src/span/: store.rs  types.rs
crates/core/src/store/: bookmarks.rs  memory.rs  mod.rs  traits.rs
crates/core/tests/: backpressure.rs  bookmarks.rs  boot_resilience.rs  capabilities.rs  client_info.rs  config_domains.rs  cursors.rs  domain_isolation.rs  domains_binding.rs  domains_lifecycle.rs  filter_dsl.rs  gelf_parsing.rs  gelf_tcp.rs  gelf_udp.rs  harness_smoke.rs  log_processor.rs  memory_store.rs  multi_session.rs  oneshot_triggers.rs  otlp_mapping.rs  persistence.rs  pipeline.rs  pre_buffer.rs  query_stats.rs  seq_block.rs  session_registry.rs  span_filter.rs  span_processor.rs  span_store.rs  span_types.rs  status_situational.rs  trace_linking.rs  trigger_window_defaults.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: auto_start.rs  main.rs  notifications.rs  server.rs
crates/mcp/src/cli/: bookmarks.rs  connect.rs  domains.rs  filters.rs  format.rs  logs.rs  mod.rs  sessions.rs  spans.rs  status.rs  traces.rs  triggers.rs
crates/mcp/tests/: cli_bookmarks.rs  cli_common.rs  cli_domains.rs  cli_filters.rs  cli_logs.rs  cli_sessions.rs  cli_status.rs  cli_traces_spans.rs  cli_triggers.rs
crates/protocol/: Cargo.toml  protocol-v1.schema.json
crates/protocol/src/: lib.rs  methods.rs  notifications.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: bridge.rs  connect.rs  filter.rs  lib.rs  methods.rs  reconnect.rs  transport.rs
crates/sdk/tests/: cursors.rs  domains.rs  filter_builder.rs  methods.rs  notifications.rs  reconnect.rs  reconnect_ordering.rs  rpc_types.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: 2026-07-17-meaningful-session-names-spec.md  medium-article.md
docs/process/: retro-log.md
docs/superpowers/plans/: 2026-03-26-gelf-mcp-server.md  2026-03-27-multi-session.md  2026-03-28-otlp-traces.md  2026-04-09-bookmarks.md  2026-04-30-broker-ification.md  2026-05-01-cursor-bookmarks.md  2026-05-01-logmon-cli.md  2026-05-03-broker-backpressure-resilience.md
docs/superpowers/specs/: 2026-03-25-gelf-mcp-server-design.md  2026-03-27-multi-session-design.md  2026-03-28-otlp-traces-design.md  2026-04-09-bookmarks-design.md  2026-04-30-broker-ification-design.md  2026-04-30-store-test-integration-handoff.md  2026-05-01-cursor-bookmarks-design.md  2026-05-01-logmon-cli-design.md  2026-06-30-domains-and-broker-improvements-proposal.md  2026-07-14-domains-and-broker-improvements-design.md
scripts/: check-schema-drift.sh
skill/: gelf-logs.md  logmon.md
src/: config.rs  lib.rs  main.rs
src/daemon/: log_processor.rs  mod.rs  persistence.rs  rpc_handler.rs  server.rs  session.rs  span_processor.rs
src/engine/: mod.rs  pipeline.rs  pre_buffer.rs  seq_counter.rs  trigger.rs
src/filter/: matcher.rs  mod.rs  parser.rs
src/gelf/: message.rs  mod.rs  tcp.rs  udp.rs
src/mcp/: notifications.rs  server.rs
src/receiver/: gelf.rs  mod.rs
src/receiver/otlp/: mapping.rs  mod.rs
src/rpc/: mod.rs  transport.rs
src/shim/: mod.rs
src/span/: store.rs  types.rs
src/store/: bookmarks.rs  memory.rs  mod.rs  traits.rs
tests/: bookmarks.rs  filter_dsl.rs  gelf_parsing.rs  gelf_tcp.rs  gelf_udp.rs  log_processor.rs  memory_store.rs  multi_session.rs  otlp_mapping.rs  persistence.rs  pipeline.rs  pre_buffer.rs  rpc_types.rs  session_registry.rs  span_filter.rs  span_store.rs
