[package]
name = "gelf-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server that collects GELF logs and exposes them to Claude"

[dependencies]
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
