[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/core",
    "crates/broker",
    "crates/sdk",
    "crates/mcp",
    "crates/xtask",
]
default-members = ["crates/broker", "crates/mcp"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["yuval@villarakavy.com"]
license = "MIT"
repository = "https://github.com/yuval/logmon-mcp"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
async-trait = "0.1"
socket2 = "0.5"
tonic = "0.12"
prost = "0.13"
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "logs", "trace"] }
axum = "0.8"
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio-test = "0.4"
tempfile = "3"
sd-notify = "0.4"
which = "6"
dirs = "5"
libc = "0.2"
rand = "0.8"
