[package]
name = "logmon-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP server that collects structured logs and exposes them to Claude (legacy crate, deleted in Task 5)"

[[bin]]
name = "logmon-mcp-server"
path = "src/main.rs"

[dependencies]
logmon-broker-protocol = { path = "../protocol" }
rmcp = { version = "1.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
socket2 = "0.5"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4"
async-trait = "0.1"
tracing-appender = "0.2"
tonic = "0.12"
prost = "0.13"
opentelemetry-proto = { version = "0.27", features = ["gen-tonic", "logs", "trace"] }
axum = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
