[package]
name = "logmon-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "logmon-broker"
path = "src/main.rs"

[dependencies]
logmon-broker-protocol = { path = "../protocol" }
logmon-broker-core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sd-notify.workspace = true
