[package]
name = "logmon-broker-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = ["dep:tempfile"]

[dependencies]
logmon-broker-protocol = { path = "../protocol" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
regex.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
fs2.workspace = true
async-trait.workspace = true
socket2.workspace = true
tonic.workspace = true
prost.workspace = true
opentelemetry-proto.workspace = true
axum.workspace = true
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
