[package]
name = "logmon-broker-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, features = ["preserve_order", "chrono04"] }
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true
